--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="template-header">
         <div class="logo">
-          <h1>Logo Here</h1>
+          <img scr="https://assets.angara.com/assets/icons/angara-logo.svg?width=256&quality=95" />
         </div>
       </div>
     </header>
@@ -31,7 +31,7 @@
 
     <!-- scripts -->
     
-    <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/9bo6DrWy8aIW4EJDgtFIKReJwKRs65oJfYU59YG0?languageCode=en" async></script>    
+    <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/O6Faxxi9Ms4KdyfouXHjobxh7plgCUaXEjJ1s0Dp?languageCode=en" async></script>    
     <!-- end of scripts -->
   </body>
 </html>
