--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="template-header">
         <div class="logo">
-          <img scr="https://cdn.shopify.com/s/files/1/0708/4605/4708/files/angara_logo.png?v=1721856908">
+          <img src="https://cdn.shopify.com/s/files/1/0708/4605/4708/files/angara_logo.png?v=1721856908">
         </div>
       </div>
     </header>
